# HackUPC2025

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/: TODOBackend.md  pyproject.toml  requirements.txt
backend/fastAPI/: main.py
backend/skyscanner_api/: .gitignore  Travel.py  db.db  gem2.py  gemini.py  main.py  prompt.txt  requirements.txt  simplified_prompt.txt  slidetransformer.py  sqliteconnect.py
backend/skyscanner_api/api/: call_api.py  flights_indicative.py  live_prices.py
backend/skyscanner_api/data_apps/: data_explorer.py
backend/skyscanner_api/database/: outputItinerary.json
backend/skyscanner_api/routers/: pexels.py
frontend/: TODOFrontend.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/components/: Button.js  Card.js  Container.js  Form.js  GroupPanel.js  Header.js
frontend/src/pages/: Home.js
frontend/src/services/: fetchModule.js  serviceapi.js  services.js
